user-service/src/main/script/kubernates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: nginx
  name: employee
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: employee
          servicePort: 8080
